Animation fixes, cities

--- a/src/components/GamblerSelect.module.css
+++ b/src/components/GamblerSelect.module.css
@@ -1,8 +1,9 @@
 .container {
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    transform: translateX(-50%);
+    /* Position removed to allow stacking in parent */
+    /* position: absolute; */
+    /* bottom: 60px; */
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
     display: flex;
     flex-direction: column;
     align-items: center;
